    have its parent "column" assigned, added
    test coverage for all column default assignment
    patterns.  [ticket:2147]

  - Fixed bug whereby nesting a label of a select()
    with another label in it would produce incorrect
    exported columns.   Among other things this would
    break an ORM column_property() mapping against
    another column_property().  [ticket:2167].

- mssql
  - Fixed bug in MSSQL dialect whereby the aliasing
    applied to a schema-qualified table would leak
    into enclosing select statements [ticket:2169].

0.6.7
=====
- orm
  - Tightened the iterate vs. remove mutex around the 
    identity map iteration, attempting to reduce the 
    chance of an (extremely rare) reentrant gc operation 
    causing a deadlock.  Might remove the mutex in
    0.7.  [ticket:2087]

  - Added a `name` argument to `Query.subquery()`, to allow
    a fixed name to be assigned to the alias object.
    [ticket:2030]

  - A warning is emitted when a joined-table inheriting mapper
    has no primary keys on the locally mapped table
    (but has pks on the superclass table).  [ticket:2019]

  - Fixed bug where "middle" class in a polymorphic hierarchy
    would have no 'polymorphic_on' column if it didn't also
    specify a 'polymorphic_identity', leading to strange
    errors upon refresh, wrong class loaded when querying
    from that target. Also emits the correct WHERE criterion
    when using single table inheritance. [ticket:2038]

 - Fixed bug where a column with a SQL or server side default
   that was excluded from a mapping with include_properties
   or exclude_properties would result in UnmappedColumnError.
   [ticket:1995]

  - A warning is emitted in the unusual case that an 
    append or similar event on a collection occurs after
    the parent object has been dereferenced, which 
    prevents the parent from being marked as "dirty" 
    in the session.  This will be an exception in 0.7.
    [ticket:2046]
